# delivery-app

./: README.md  docker-compose.yml  main.py  pyproject.toml
client/: database.py  endpoint.py  routes.py  schemas.py
deliver/: delivering.py
process/: processing.py
